apps/adguard/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard
spec:
  selector:
    app: adguard
  ports:
    - name: http
      port: 80
      targetPort: 80
